--- a/index.html
+++ b/index.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
-  </head>
-  <body>
-    <script src="" async defer></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>The Unofficial Next Web Mock-up Page</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/main.css">
+</head>
+
+<body>
+  <nav class="nav">
+    <div class="nav-logo">
+      <a href="#">
+        <img src="./images/tnw-logo.svg">
+      </a>
+    </div>
+    <ul class="nav-icons">
+      <li>
+        <a href="#">
+          <i class="material-icons">search</i>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="material-icons">menu</i>
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <div class="tech-fest-cta">
+    <a href="#">
+      Did you know we have a TECH FESTIVAL? Check it out <span><i class="material-icons">arrow_right_alt</i></span>
+    </a>
+  </div>
+  <div class="top-articles">
+    <article class="top1">1</article>
+    <article class="top2">2</article>
+    <article class="top3">3</article>
+  </div>
+</body>
+
 </html>
