Adds extra sections to the layout plus the media queries

--- a/index.html
+++ b/index.html
@@ -42,6 +42,49 @@
     <article class="top2">2</article>
     <article class="top3">3</article>
   </div>
+  <section class="latest-news">
+    <h2>Latest news ></h2>
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <div>6</div>
+    <div>7</div>
+    <div>8</div>
+  </section>
+  <section class="latest-funding">
+    <ul>
+      <li>See More</li>
+      <li>Get Updates by email</li>
+      <li>Add Info</li>
+    </ul>
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+  </section>
+  <div class="sections-grid">
+    <section>1</section>
+    <section>2</section>
+    <section>3</section>
+    <section>4</section>
+    <section>5</section>
+    <section>6</section>
+    <section>7</section>
+    <section>8</section>
+  </div>
+  <section class="latest-deals">
+    <h2>Latest deals ></h2>
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <div>6</div>
+    <div>7</div>
+    <div>8</div>
+  </section>
+  <footer></footer>
 </body>
 
 </html>
