Add nav-bar layout structure for mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav class="nav">
     <div class="nav-logo">
       <a href="#">
-        <img src="./images/tnw-logo.svg">
+        LOGO HERE
       </a>
     </div>
     <ul class="nav-icons">
