Sets up the layout structure for the top and latest articles

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <div>8</div>
   </section>
   <section class="latest-funding">
+    <h2>Latest Funding rounds on index.co ></h2>
     <ul>
       <li>See More</li>
       <li>Get Updates by email</li>
