Finish mobile layout structure

--- a/index.html
+++ b/index.html
@@ -60,32 +60,277 @@
       <li>Get Updates by email</li>
       <li>Add Info</li>
     </ul>
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
+    <div class="fund-banner">1</div>
+    <div class="fund-banner">2</div>
+    <div class="fund-banner">3</div>
   </section>
   <div class="sections-grid">
-    <section>1</section>
-    <section>2</section>
-    <section>3</section>
-    <section>4</section>
-    <section>5</section>
-    <section>6</section>
-    <section>7</section>
-    <section>8</section>
+    <section>
+      <h3>Apps ></h3>
+      <article>ARTICLE LINK/BACKGROUND</article>
+      <div>
+        <article>ARTICLE LINK/BACKGROUND</article>
+        <img src="#" alt="">
+      </div>
+      <ul>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+      </ul>
+    </section>
+    <section>
+      <h3>Gear ></h3>
+      <article>ARTICLE LINK/BACKGROUND</article>
+      <div>
+        <article>ARTICLE LINK/BACKGROUND</article>
+        <img src="#" alt="">
+      </div>
+      <ul>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+      </ul>
+    </section>
+    <section>
+      <h3>Tech ></h3>
+      <article>ARTICLE LINK/BACKGROUND</article>
+      <div>
+        <article>ARTICLE LINK/BACKGROUND</article>
+        <img src="#" alt="">
+      </div>
+      <ul>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+      </ul>
+    </section>
+    <section>
+      <h3>Creative ></h3>
+      <article>ARTICLE LINK/BACKGROUND</article>
+      <div>
+        <article>ARTICLE LINK/BACKGROUND</article>
+        <img src="#" alt="">
+      </div>
+      <ul>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+      </ul>
+    </section>
+    <section>
+      <h3>Podium ></h3>
+      <article>ARTICLE LINK/BACKGROUND</article>
+      <div>
+        <article>ARTICLE LINK/BACKGROUND</article>
+        <img src="#" alt="">
+      </div>
+      <ul>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+      </ul>
+    </section>
+    <section>
+      <h3>Insights ></h3>
+      <article>ARTICLE LINK/BACKGROUND</article>
+      <div>
+        <article>ARTICLE LINK/BACKGROUND</article>
+        <img src="#" alt="">
+      </div>
+      <ul>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+      </ul>
+    </section>
+    <section>
+      <h3>Launch ></h3>
+      <article>ARTICLE LINK/BACKGROUND</article>
+      <div>
+        <article>ARTICLE LINK/BACKGROUND</article>
+        <img src="#" alt="">
+      </div>
+      <ul>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+      </ul>
+    </section>
+    <section>
+      <h3>Distract ></h3>
+      <article>ARTICLE LINK/BACKGROUND</article>
+      <div>
+        <article>ARTICLE LINK/BACKGROUND</article>
+        <img src="#" alt="">
+      </div>
+      <ul>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+      </ul>
+    </section>
   </div>
   <section class="latest-deals">
     <h2>Latest deals ></h2>
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
-    <div>5</div>
-    <div>6</div>
-    <div>7</div>
-    <div>8</div>
+    <ul>
+      <li>
+        <a href="#">
+          <img src="#" alt="">
+        </a>
+        <a href="">Text with link goes here</a>
+        <span>Price tag 1</span>
+        <span>Price tag 2</span>
+      </li>
+      <li>
+        <a href="#">
+          <img src="#" alt="">
+        </a>
+        <a href="">Text with link goes here</a>
+        <span>Price tag 1</span>
+        <span>Price tag 2</span>
+      </li>
+      <li>
+        <a href="#">
+          <img src="#" alt="">
+        </a>
+        <a href="">Text with link goes here</a>
+        <span>Price tag 1</span>
+        <span>Price tag 2</span>
+      </li>
+      <li>
+        <a href="#">
+          <img src="#" alt="">
+        </a>
+        <a href="">Text with link goes here</a>
+        <span>Price tag 1</span>
+        <span>Price tag 2</span>
+      </li>
+      <li>
+        <a href="#">
+          <img src="#" alt="">
+        </a>
+        <a href="">Text with link goes here</a>
+        <span>Price tag 1</span>
+        <span>Price tag 2</span>
+      </li>
+      <li>
+        <a href="#">
+          <img src="#" alt="">
+        </a>
+        <a href="">Text with link goes here</a>
+        <span>Price tag 1</span>
+        <span>Price tag 2</span>
+      </li>
+      <li>
+        <a href="#">
+          <img src="#" alt="">
+        </a>
+        <a href="">Text with link goes here</a>
+        <span>Price tag 1</span>
+        <span>Price tag 2</span>
+      </li>
+      <li>
+        <a href="#">
+          <img src="#" alt="">
+        </a>
+        <a href="">Text with link goes here</a>
+        <span>Price tag 1</span>
+        <span>Price tag 2</span>
+      </li>
+    </ul>
   </section>
-  <footer></footer>
+  <footer>
+    <div class="footer-links">
+      <ul>
+        <li>
+          <a href="#">
+            facebook
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            twitter
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            youtube
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            instagram
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            pinterest
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            email
+          </a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#">
+            events
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            about
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            advertise
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            jobs
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            contact
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer-legal">
+      <span>logo and some text</span>
+      <span>some more text</span>
+      <span>text again</span>
+    </div>
+  </footer>
 </body>
 
 </html>
