Adds tablet view media queries

--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
         LOGO HERE
       </a>
     </div>
+    <div class="nav-bar-ipad-1">
+      <ul>
+        <li>News</li>
+        <li>TNW2020</li>
+        <li>Business <i class="material-icons">arrow_drop_down</i></li>
+        <li>AMAs</li>
+        <li>Sapces</li>
+        <li>Terms and condintions</li>
+      </ul>
+    </div>
+    <div class="nav-bar-ipad-2">
+      <ul>
+        <li>latest</li>
+        <li>Hard fork</li>
+        <li>plugged</li>
+        <li>fundamentals</li>
+        <li>readme</li>
+        <li><i class="material-icons">search</i></li>
+      </ul>
+    </div>
     <ul class="nav-icons">
       <li>
         <a href="#">
