--- a/index.html
+++ b/index.html
@@ -19,25 +19,27 @@
         LOGO HERE
       </a>
     </div>
-    <div class="nav-bar-ipad-1">
-      <ul>
-        <li>News</li>
-        <li>TNW2020</li>
-        <li>Business <i class="material-icons">arrow_drop_down</i></li>
-        <li>AMAs</li>
-        <li>Sapces</li>
-        <li>Terms and condintions</li>
-      </ul>
-    </div>
-    <div class="nav-bar-ipad-2">
-      <ul>
-        <li>latest</li>
-        <li>Hard fork</li>
-        <li>plugged</li>
-        <li>fundamentals</li>
-        <li>readme</li>
-        <li><i class="material-icons">search</i></li>
-      </ul>
+    <div class="nav-links-ipad-wrapper">
+      <div class="nav-bar-ipad-1">
+        <ul>
+          <li>News</li>
+          <li>TNW2020</li>
+          <li>Business <i class="material-icons">arrow_drop_down</i></li>
+          <li>AMAs</li>
+          <li>Sapces</li>
+          <li>Terms and condintions</li>
+        </ul>
+      </div>
+      <div class="nav-bar-ipad-2">
+        <ul>
+          <li>latest</li>
+          <li>Hard fork</li>
+          <li>plugged</li>
+          <li>fundamentals</li>
+          <li>readme</li>
+          <li><i class="material-icons">search</i></li>
+        </ul>
+      </div>
     </div>
     <ul class="nav-icons">
       <li>
@@ -63,7 +65,7 @@
     <article class="top3">3</article>
   </div>
   <section class="latest-news">
-    <h2>Latest news ></h2>
+    <h2 class="ln-heading">Latest news ></h2>
     <div>1</div>
     <div>2</div>
     <div>3</div>
@@ -80,9 +82,11 @@
       <li>Get Updates by email</li>
       <li>Add Info</li>
     </ul>
-    <div class="fund-banner">1</div>
-    <div class="fund-banner">2</div>
-    <div class="fund-banner">3</div>
+    <div class="fund-banner-container">
+      <div class="fund-banner">1</div>
+      <div class="fund-banner">2</div>
+      <div class="fund-banner">3</div>
+    </div>
   </section>
   <div class="sections-grid">
     <section>
@@ -214,9 +218,9 @@
       </ul>
     </section>
   </div>
-  <section class="latest-deals">
+  <section>
     <h2>Latest deals ></h2>
-    <ul>
+    <ul class="latest-deals-grid">
       <li>
         <a href="#">
           <img src="#" alt="">
@@ -285,7 +289,7 @@
   </section>
   <footer>
     <div class="footer-links">
-      <ul>
+      <ul class="footer-links-ln1">
         <li>
           <a href="#">
             facebook
@@ -317,7 +321,7 @@
           </a>
         </li>
       </ul>
-      <ul>
+      <ul class="footer-links-ln2">
         <li>
           <a href="#">
             events
