Adds extra elements on a media query on 1024 sizs

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
   </section>
   <section class="latest-funding">
     <h2>Latest Funding rounds on index.co ></h2>
-    <ul>
-      <li>See More</li>
-      <li>Get Updates by email</li>
+    <ul class="lf-links">
+      <li>See More</li><span class="lf-links-bars"> | </span>
+      <li>Get Updates by email</li><span class="lf-links-bars"> | </span>
       <li>Add Info</li>
     </ul>
     <div class="fund-banner-container">
