Style mobile header and top articles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav class="nav">
     <div class="nav-logo">
       <a href="#">
-        LOGO HERE
+        <img src="./images/tnw-logo.svg" alt="tnw logo">
       </a>
     </div>
     <div class="nav-links-ipad-wrapper">
@@ -44,7 +44,7 @@
     <ul class="nav-icons">
       <li>
         <a href="#">
-          <i class="material-icons">search</i>
+          <i class="material-icons" id="nav-search">search</i>
         </a>
       </li>
       <li>
@@ -56,16 +56,38 @@
   </nav>
   <div class="tech-fest-cta">
     <a href="#">
-      Did you know we have a TECH FESTIVAL? Check it out <span><i class="material-icons">arrow_right_alt</i></span>
+      Did you know we have a TECH FESTIVAL? Check it out
+      <span><i class="material-icons">arrow_right_alt</i></span>
     </a>
   </div>
   <div class="top-articles">
-    <article class="top1">1</article>
-    <article class="top2">2</article>
-    <article class="top3">3</article>
+    <article class="top1">
+      <p>PLAY</p>
+      <h2>How to check if your PC can handle the latest games</h2>
+      <p>by <a href="#">Rachel Kaser</a></p>
+      <p>
+        <i class="material-icon">clock</i>
+        <time>1 hour ago</time>
+        <i class="material-icon">share</i> 2
+      </p>
+    </article>
+    <article class="top2">
+      <h2>Reddit, PayPal, Spotify, and more are speaking at TNW’s
+        tech festival in Amsterdam</h2>
+    </article>
+    <article class="top3">
+      <h2>This algorithm could improve emergency
+        responses by removing lies spread on Twitter</h2>
+      <p>by <a href="#">Thomas Macaulay</a></p>
+      <p>
+        <i class="material-icon">clock</i>
+        <time>2 hours ago</time>
+        <i class="material-icon">share</i> 3
+      </p>
+    </article>
   </div>
   <section class="latest-news">
-    <h2 class="ln-heading">Latest news ></h2>
+    <h2 id="ln-heading">Latest news <i class="material-icons">keyboard_arrow_right</i></h2>
     <div>1</div>
     <div>2</div>
     <div>3</div>
@@ -86,6 +108,7 @@
       <div class="fund-banner">1</div>
       <div class="fund-banner">2</div>
       <div class="fund-banner">3</div>
+      <div class="fund-banner fourth-banner">4</div>
     </div>
   </section>
   <div class="sections-grid">
