Create fund-banner layout

--- a/index.html
+++ b/index.html
@@ -88,14 +88,78 @@
   </div>
   <section class="latest-news">
     <h2 id="ln-heading">Latest news <i class="material-icons">keyboard_arrow_right</i></h2>
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
-    <div>5</div>
-    <div>6</div>
-    <div>7</div>
-    <div>8</div>
+    <div class="ln-mobile-atcl-wrapper">
+      <div class="ln-bg-img img1">
+        <a href="#"></a>
+      </div>
+      <div class="ln-atcl-head">
+        <h3>Can face masks really protect us from toxic pullutants?</h3>
+        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+      </div>
+    </div>
+    <div class="ln-mobile-atcl-wrapper">
+      <div class="ln-bg-img img1">
+        <a href="#"></a>
+      </div>
+      <div class="ln-atcl-head">
+        <h3>Can face masks really protect us from toxic pullutants?</h3>
+        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+      </div>
+    </div>
+    <div class="ln-mobile-atcl-wrapper">
+      <div class="ln-bg-img img1">
+        <a href="#"></a>
+      </div>
+      <div class="ln-atcl-head">
+        <h3>Can face masks really protect us from toxic pullutants?</h3>
+        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+      </div>
+    </div>
+    <div class="ln-mobile-atcl-wrapper">
+      <div class="ln-bg-img img1">
+        <a href="#"></a>
+      </div>
+      <div class="ln-atcl-head">
+        <h3>Can face masks really protect us from toxic pullutants?</h3>
+        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+      </div>
+    </div>
+    <div class="ln-mobile-atcl-wrapper">
+      <div class="ln-bg-img img1">
+        <a href="#"></a>
+      </div>
+      <div class="ln-atcl-head">
+        <h3>Can face masks really protect us from toxic pullutants?</h3>
+        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+      </div>
+    </div>
+    <div class="ln-mobile-atcl-wrapper">
+      <div class="ln-bg-img img1">
+        <a href="#"></a>
+      </div>
+      <div class="ln-atcl-head">
+        <h3>Can face masks really protect us from toxic pullutants?</h3>
+        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+      </div>
+    </div>
+    <div class="ln-mobile-atcl-wrapper">
+      <div class="ln-bg-img img1">
+        <a href="#"></a>
+      </div>
+      <div class="ln-atcl-head">
+        <h3>Can face masks really protect us from toxic pullutants?</h3>
+        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+      </div>
+    </div>
+    <div class="ln-mobile-atcl-wrapper">
+      <div class="ln-bg-img img1">
+        <a href="#"></a>
+      </div>
+      <div class="ln-atcl-head">
+        <h3>Can face masks really protect us from toxic pullutants?</h3>
+        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+      </div>
+    </div>
   </section>
   <section class="latest-funding">
     <h2>Latest Funding rounds on index.co ></h2>
@@ -105,7 +169,26 @@
       <li>Add Info</li>
     </ul>
     <div class="fund-banner-container">
-      <div class="fund-banner">1</div>
+      <div class="fund-banner">
+        <img src="images/fb-img1.png" alt="fund banner image">
+        <h4>Rota App</h4>
+        <div class="fb-pricetag">
+          <h5>£3M</h5>
+          <p>SEED FUND</p>
+        </div>
+        <div class="fb-local-offer">
+          <a href="#">
+            <i class="material-icons fb-local-offer-icon">local_offer</i>
+            <span>Hospitality</span>
+          </a>
+        </div>
+        <div class="fb-local-offer-bottom">
+          <p>Flexible staffing app secures
+            £3m funding to develop machine learning tech
+            <a href="#">on Bdaily News</a>
+          </p>
+        </div>
+      </div>
       <div class="fund-banner">2</div>
       <div class="fund-banner">3</div>
       <div class="fund-banner fourth-banner">4</div>
