Finishes the fund banners and Adds latest news background image

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
   <section class="latest-news">
     <h2 id="ln-heading">Latest news <i class="material-icons">keyboard_arrow_right</i></h2>
     <div class="ln-mobile-atcl-wrapper">
-      <div class="ln-bg-img img1">
-        <a href="#"></a>
-      </div>
+      <!-- <div class="ln-bg-img img1"> -->
+        <a href="#" class="ln-bg-imgg img1"></a>
+      <!-- </div> -->
       <div class="ln-atcl-head">
         <h3>Can face masks really protect us from toxic pullutants?</h3>
         <p>The Conversations<span> - </span><time>4 hours ago</time></p>
@@ -189,8 +189,52 @@
           </p>
         </div>
       </div>
-      <div class="fund-banner">2</div>
-      <div class="fund-banner">3</div>
+      <div class="fund-banner">
+        <img src="images/fb-img2.jpg" alt="fund banner image">
+        <h4>RunSafe Security</h4>
+        <div class="fb-pricetag">
+          <h5>$3.5M</h5>
+          <p>SERIES A</p>
+        </div>
+        <div class="fb-local-offer">
+          <a href="#">
+            <i class="material-icons fb-local-offer-icon">local_offer</i>
+            <span>Security</span>
+          </a>
+          <a href="#">
+            <i class="material-icons fb-local-offer-icon">card_travel</i>
+            <span>NextGen Venture Partners</span>
+          </a>
+        </div>
+        <div class="fb-local-offer-bottom">
+          <p>RunSafe Security Holds Second Close of 
+            $3.5M in Series A Funding <a href="#">on FinSMEs</a>
+          </p>
+        </div>
+      </div>
+      <div class="fund-banner">
+        <img src="images/fb-img3.png" alt="fund banner image">
+        <h4>RunSafe Security</h4>
+        <div class="fb-pricetag">
+          <h5>$3.5M</h5>
+          <p>SERIES A</p>
+        </div>
+        <div class="fb-local-offer">
+          <a href="#">
+            <i class="material-icons fb-local-offer-icon">local_offer</i>
+            <span>Finance, +2</span>
+          </a>
+          <a href="#">
+            <i class="material-icons fb-local-offer-icon">card_travel</i>
+            <span>Connect Ventures, +4</span>
+          </a>
+        </div>
+        <div class="fb-local-offer-bottom">
+          <p>Money management app Emma 
+            bags $2.5m in seed funding <a href="#">on FinTech Futures</a>
+          </p>
+        </div>
+      </div>
       <div class="fund-banner fourth-banner">4</div>
     </div>
   </section>
