try to fix latest-news image size

--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
     <h2 id="ln-heading">Latest news <i class="material-icons">keyboard_arrow_right</i></h2>
     <div class="ln-mobile-atcl-wrapper">
       <!-- <div class="ln-bg-img img1"> -->
-        <a href="#" class="ln-bg-imgg img1"></a>
+      <a href="#" class="ln-bg-imgg img1"></a>
       <!-- </div> -->
       <div class="ln-atcl-head">
         <h3>Can face masks really protect us from toxic pullutants?</h3>
         <p>The Conversations<span> - </span><time>4 hours ago</time></p>
       </div>
     </div>
-    <div class="ln-mobile-atcl-wrapper">
+    <!-- <div class="ln-mobile-atcl-wrapper">
       <div class="ln-bg-img img1">
         <a href="#"></a>
       </div>
@@ -159,7 +159,7 @@
         <h3>Can face masks really protect us from toxic pullutants?</h3>
         <p>The Conversations<span> - </span><time>4 hours ago</time></p>
       </div>
-    </div>
+    </div> -->
   </section>
   <section class="latest-funding">
     <h2>Latest Funding rounds on index.co ></h2>
@@ -207,7 +207,7 @@
           </a>
         </div>
         <div class="fb-local-offer-bottom">
-          <p>RunSafe Security Holds Second Close of 
+          <p>RunSafe Security Holds Second Close of
             $3.5M in Series A Funding <a href="#">on FinSMEs</a>
           </p>
         </div>
@@ -230,7 +230,7 @@
           </a>
         </div>
         <div class="fb-local-offer-bottom">
-          <p>Money management app Emma 
+          <p>Money management app Emma
             bags $2.5m in seed funding <a href="#">on FinTech Futures</a>
           </p>
         </div>
