Adds images and some other content to the latest news section

--- a/index.html
+++ b/index.html
@@ -89,12 +89,17 @@
   <section class="latest-news">
     <h2 id="ln-heading">Latest news <i class="material-icons">keyboard_arrow_right</i></h2>
     <div class="ln-mobile-atcl-wrapper">
-      <!-- <div class="ln-bg-img img1"> -->
       <a href="#" class="ln-bg-imgg img1"></a>
-      <!-- </div> -->
       <div class="ln-atcl-head">
         <h3>Can face masks really protect us from toxic pullutants?</h3>
         <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+      </div>
+    </div>
+    <div class="ln-mobile-atcl-wrapper">
+        <a href="#" class="ln-bg-imgg img2"></a>
+      <div class="ln-atcl-head">
+        <h3>Norway pushes to electrify all domestic flights by 2040</h3>
+        <p>Matthew Beedham <span> - </span><time>5 hours ago</time></p>
       </div>
     </div>
     <!-- <div class="ln-mobile-atcl-wrapper">
@@ -123,43 +128,34 @@
         <h3>Can face masks really protect us from toxic pullutants?</h3>
         <p>The Conversations<span> - </span><time>4 hours ago</time></p>
       </div>
-    </div>
-    <div class="ln-mobile-atcl-wrapper">
-      <div class="ln-bg-img img1">
-        <a href="#"></a>
-      </div>
-      <div class="ln-atcl-head">
-        <h3>Can face masks really protect us from toxic pullutants?</h3>
-        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
-      </div>
-    </div>
-    <div class="ln-mobile-atcl-wrapper">
-      <div class="ln-bg-img img1">
-        <a href="#"></a>
-      </div>
-      <div class="ln-atcl-head">
-        <h3>Can face masks really protect us from toxic pullutants?</h3>
-        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
-      </div>
-    </div>
-    <div class="ln-mobile-atcl-wrapper">
-      <div class="ln-bg-img img1">
-        <a href="#"></a>
-      </div>
-      <div class="ln-atcl-head">
-        <h3>Can face masks really protect us from toxic pullutants?</h3>
-        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
-      </div>
-    </div>
-    <div class="ln-mobile-atcl-wrapper">
-      <div class="ln-bg-img img1">
-        <a href="#"></a>
-      </div>
-      <div class="ln-atcl-head">
-        <h3>Can face masks really protect us from toxic pullutants?</h3>
-        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
-      </div>
     </div> -->
+    <div class="ln-mobile-atcl-wrapper">
+      <div class="ln-bg-img img1">
+        <a href="#"></a>
+      </div>
+      <div class="ln-atcl-head">
+        <h3>Can face masks really protect us from toxic pullutants?</h3>
+        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+      </div>
+    </div>
+    <div class="ln-mobile-atcl-wrapper">
+      <div class="ln-bg-img img1">
+        <a href="#"></a>
+      </div>
+      <div class="ln-atcl-head">
+        <h3>Can face masks really protect us from toxic pullutants?</h3>
+        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+      </div>
+    </div>
+    <div class="ln-mobile-atcl-wrapper">
+      <div class="ln-bg-img img1">
+        <a href="#"></a>
+      </div>
+      <div class="ln-atcl-head">
+        <h3>Can face masks really protect us from toxic pullutants?</h3>
+        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+      </div>
+    </div>
   </section>
   <section class="latest-funding">
     <h2>Latest Funding rounds on index.co ></h2>
