--- a/index.html
+++ b/index.html
@@ -89,73 +89,62 @@
   <section class="latest-news">
     <h2 id="ln-heading">Latest news <i class="material-icons">keyboard_arrow_right</i></h2>
     <div class="ln-mobile-atcl-wrapper">
-      <a href="#" class="ln-bg-imgg img1"></a>
+      <a href="#" class="ln-bg-img img1"></a>
       <div class="ln-atcl-head">
         <h3>Can face masks really protect us from toxic pullutants?</h3>
         <p>The Conversations<span> - </span><time>4 hours ago</time></p>
       </div>
     </div>
     <div class="ln-mobile-atcl-wrapper">
-        <a href="#" class="ln-bg-imgg img2"></a>
+      <a href="#" class="ln-bg-img img2"></a>
       <div class="ln-atcl-head">
         <h3>Norway pushes to electrify all domestic flights by 2040</h3>
         <p>Matthew Beedham <span> - </span><time>5 hours ago</time></p>
       </div>
     </div>
-    <!-- <div class="ln-mobile-atcl-wrapper">
-      <div class="ln-bg-img img1">
-        <a href="#"></a>
-      </div>
+    <div class="ln-mobile-atcl-wrapper">
+      <a href="#" class="ln-bg-img img3"></a>
       <div class="ln-atcl-head">
-        <h3>Can face masks really protect us from toxic pullutants?</h3>
-        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+        <h3>Scientists set up new telescopes dedicated to finding aliens</h3>
+        <p>Ivan Mehta <span> - </span><time>6 hours ago</time></p>
       </div>
     </div>
     <div class="ln-mobile-atcl-wrapper">
-      <div class="ln-bg-img img1">
-        <a href="#"></a>
-      </div>
+      <a href="#" class="ln-bg-img img4"></a>
       <div class="ln-atcl-head">
-        <h3>Can face masks really protect us from toxic pullutants?</h3>
-        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+        <h3>Satoshi Nakaboto: ‘Bitcoin plunges alongside global markets’</h3>
+        <p>Satoshi Nakaboto <span> - </span><time>8 hours ago</time></p>
       </div>
     </div>
     <div class="ln-mobile-atcl-wrapper">
-      <div class="ln-bg-img img1">
-        <a href="#"></a>
-      </div>
+      <a href="#" class="ln-bg-img img5"></a>
       <div class="ln-atcl-head">
-        <h3>Can face masks really protect us from toxic pullutants?</h3>
-        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
-      </div>
-    </div> -->
-    <div class="ln-mobile-atcl-wrapper">
-      <div class="ln-bg-img img1">
-        <a href="#"></a>
-      </div>
-      <div class="ln-atcl-head">
-        <h3>Can face masks really protect us from toxic pullutants?</h3>
-        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+        <h3>Almost half of Indian startups don’t hire women to save on maternity costs</h3>
+        <p>Cara Curtis <span> - </span><time>6 hours ago</time></p>
       </div>
     </div>
     <div class="ln-mobile-atcl-wrapper">
-      <div class="ln-bg-img img1">
-        <a href="#"></a>
-      </div>
+      <a href="#" class="ln-bg-img img6"></a>
       <div class="ln-atcl-head">
-        <h3>Can face masks really protect us from toxic pullutants?</h3>
-        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+        <h3>Here's your last chance to win a free iPhone 11, AirPods and charging pad</h3>
+        <p>TNW Deals <span> - </span><time>7 hours ago</time></p>
       </div>
     </div>
     <div class="ln-mobile-atcl-wrapper">
-      <div class="ln-bg-img img1">
-        <a href="#"></a>
-      </div>
+      <a href="#" class="ln-bg-img img7"></a>
       <div class="ln-atcl-head">
-        <h3>Can face masks really protect us from toxic pullutants?</h3>
-        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+        <h3>John Oliver roasts Disney-owned Hotstar for making cuts to his show in India</h3>
+        <p>Ivan Mehta <span> - </span><time>8 hours ago</time></p>
       </div>
     </div>
+    <div class="ln-mobile-atcl-wrapper">
+      <a href="#" class="ln-bg-img img8"></a>
+      <div class="ln-atcl-head">
+        <h3>How Slack keeps employees focused while being a distracting app</h3>
+        <p>Nir Eyal <span> - </span><time>8 hours ago</time></p>
+      </div>
+    </div>
+
   </section>
   <section class="latest-funding">
     <h2>Latest Funding rounds on index.co ></h2>
