Adds background images to the articles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="//db.onlinewebfonts.com/c/4712603f54ff886c6ba46185644675ba?family=ShentoxW01-Light" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -67,7 +68,7 @@
       <p>by <a href="#">Rachel Kaser</a></p>
       <p>
         <i class="material-icon">clock</i>
-        <time>1 hour ago</time>
+        1 hour ago
         <i class="material-icon">share</i> 2
       </p>
     </article>
@@ -81,7 +82,7 @@
       <p>by <a href="#">Thomas Macaulay</a></p>
       <p>
         <i class="material-icon">clock</i>
-        <time>2 hours ago</time>
+        2 hours ago
         <i class="material-icon">share</i> 3
       </p>
     </article>
@@ -92,56 +93,56 @@
       <a href="#" class="ln-bg-img img1"></a>
       <div class="ln-atcl-head">
         <h3>Can face masks really protect us from toxic pullutants?</h3>
-        <p>The Conversations<span> - </span><time>4 hours ago</time></p>
+        <p>The Conversations<span> - </span>4 hours ago</p>
       </div>
     </div>
     <div class="ln-mobile-atcl-wrapper">
       <a href="#" class="ln-bg-img img2"></a>
       <div class="ln-atcl-head">
         <h3>Norway pushes to electrify all domestic flights by 2040</h3>
-        <p>Matthew Beedham <span> - </span><time>5 hours ago</time></p>
+        <p>Matthew Beedham <span> - </span>5 hours ago</p>
       </div>
     </div>
     <div class="ln-mobile-atcl-wrapper">
       <a href="#" class="ln-bg-img img3"></a>
       <div class="ln-atcl-head">
         <h3>Scientists set up new telescopes dedicated to finding aliens</h3>
-        <p>Ivan Mehta <span> - </span><time>6 hours ago</time></p>
+        <p>Ivan Mehta <span> - </span>6 hours ago</p>
       </div>
     </div>
     <div class="ln-mobile-atcl-wrapper">
       <a href="#" class="ln-bg-img img4"></a>
       <div class="ln-atcl-head">
         <h3>Satoshi Nakaboto: ‘Bitcoin plunges alongside global markets’</h3>
-        <p>Satoshi Nakaboto <span> - </span><time>8 hours ago</time></p>
+        <p>Satoshi Nakaboto <span> - </span>8 hours ago</p>
       </div>
     </div>
     <div class="ln-mobile-atcl-wrapper">
       <a href="#" class="ln-bg-img img5"></a>
       <div class="ln-atcl-head">
         <h3>Almost half of Indian startups don’t hire women to save on maternity costs</h3>
-        <p>Cara Curtis <span> - </span><time>6 hours ago</time></p>
+        <p>Cara Curtis <span> - </span>6 hours ago</p>
       </div>
     </div>
     <div class="ln-mobile-atcl-wrapper">
       <a href="#" class="ln-bg-img img6"></a>
       <div class="ln-atcl-head">
         <h3>Here's your last chance to win a free iPhone 11, AirPods and charging pad</h3>
-        <p>TNW Deals <span> - </span><time>7 hours ago</time></p>
+        <p>TNW Deals <span> - </span>7 hours ago</p>
       </div>
     </div>
     <div class="ln-mobile-atcl-wrapper">
       <a href="#" class="ln-bg-img img7"></a>
       <div class="ln-atcl-head">
         <h3>John Oliver roasts Disney-owned Hotstar for making cuts to his show in India</h3>
-        <p>Ivan Mehta <span> - </span><time>8 hours ago</time></p>
+        <p>Ivan Mehta <span> - </span>8 hours ago</p>
       </div>
     </div>
     <div class="ln-mobile-atcl-wrapper">
       <a href="#" class="ln-bg-img img8"></a>
       <div class="ln-atcl-head">
         <h3>How Slack keeps employees focused while being a distracting app</h3>
-        <p>Nir Eyal <span> - </span><time>8 hours ago</time></p>
+        <p>Nir Eyal <span> - </span>8 hours ago</p>
       </div>
     </div>
 
