Start sections-grid, try to adjust background image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="//db.onlinewebfonts.com/c/4712603f54ff886c6ba46185644675ba?family=ShentoxW01-Light" rel="stylesheet" type="text/css">
+  <link href="//db.onlinewebfonts.com/c/4712603f54ff886c6ba46185644675ba?family=ShentoxW01-Light" rel="stylesheet"
+    type="text/css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -227,7 +228,26 @@
   <div class="sections-grid">
     <section>
       <h3>Apps ></h3>
-      <article>ARTICLE LINK/BACKGROUND</article>
+      <article>
+        <header class="sg-img1">
+          <h5>Most Popular</h5>
+          <h3>
+            <a href="#">
+              App stores attempt to keep lid on coronavirus misinformation
+            </a>
+          </h3>
+          <ul>
+            <li>
+              <a href="#">
+                Rachel Kaser
+              </a>
+            </li>
+            <li>
+              <p>2 days ago</p>
+            </li>
+          </ul>
+        </header>
+      </article>
       <div>
         <article>ARTICLE LINK/BACKGROUND</article>
         <img src="#" alt="">
