Fix linear gradient background image sections grid

--- a/index.html
+++ b/index.html
@@ -248,6 +248,9 @@
           </ul>
         </header>
       </article>
+      <article class="sub-article">
+
+      </article>
       <div>
         <article>ARTICLE LINK/BACKGROUND</article>
         <img src="#" alt="">
