Adds more content to the sub-article class

--- a/index.html
+++ b/index.html
@@ -249,8 +249,23 @@
         </header>
       </article>
       <article class="sub-article">
-
+        <div>
+          <h3>LATEST</h3>
+          <p>
+            <b>This tool automatically removes the background from any</b>
+          </p>
+        </div>
+        <img src="./images/latest.png" alt="latest">
       </article>
+      <div class="sg-article-list">
+      <ul>
+        <li>This tool automatically removes the background from any video or GIF</li>
+        <li>WhatsApp's dark mode is a fucking bummer</li>
+        <li>How to turn any long read into a fake podcast with Google Assistant</li>
+        <li>Twitter is working on its version of Stories and we're already over it</li>
+        <li>It's painfully easy to see who's liked you on Tinder without paying for Gold</li>
+      </ul>
+    </div>
       <div>
         <article>ARTICLE LINK/BACKGROUND</article>
         <img src="#" alt="">
